# eng-digest

./: .deployment-timestamp  .gitignore  DEPLOYMENT.md  INTEGRATION_TESTING.md  LICENSE  QUICK_TEST.md  README.md  SUMMARIZATION.md  TESTING.md  check_deployment.sh  config.yml  deployment_status.md  index.html  pyproject.toml  requirements.txt  rss.xml  setup.py  trigger_deployment.sh
.github/workflows/: daily-digest.yml
digests/: digest-2025-12-03.md  digest-2025-12-05.html  digest-2025-12-05.md  digest-2025-12-06.html  digest-2025-12-06.md  digest-2025-12-07.html  digest-2025-12-07.md  digest-2025-12-08.html  digest-2025-12-08.md  digest-2025-12-09.html  digest-2025-12-09.md  digest-2025-12-10.html  digest-2025-12-10.md  digest-2025-12-11.html  digest-2025-12-11.md  digest-2025-12-12.html  digest-2025-12-12.md  digest-2025-12-13.html  digest-2025-12-13.md  digest-2025-12-14.html  digest-2025-12-14.md  digest-2025-12-15.html  digest-2025-12-15.md  digest-2025-12-16.html  digest-2025-12-16.md  digest-2025-12-17.html  digest-2025-12-17.md  digest-2025-12-18.html  digest-2025-12-18.md  digest-2025-12-19.html  digest-2025-12-19.md  digest-2025-12-20.html  digest-2025-12-20.md  digest-2025-12-21.html  digest-2025-12-21.md  digest-2025-12-22.html  digest-2025-12-22.md  digest-2025-12-23.html  digest-2025-12-23.md  digest-2025-12-24.html  (+421 more)
eng_digest/: __init__.py  cli.py  email_sender.py  generate_index.py  models.py  tui.py
eng_digest/config/: __init__.py  loader.py
eng_digest/database/: __init__.py  manager.py
eng_digest/fetcher/: __init__.py  base.py  html_fetcher.py  rss_fetcher.py
eng_digest/output/: __init__.py  base.py  html.py  markdown.py  rss.py  text.py
eng_digest/parser/: __init__.py  article_parser.py
examples/: config.email.example.yml  config.example.yml
tests/: __init__.py  conftest.py  test_models.py  test_output.py  test_parser.py  test_summarizer.py
(+5 files in other folders)
